...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SettingsBioText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SettingsUsernameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/SettingsNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/SettingsSurnameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioPublic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioPrivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/SettingsSubmitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/SettingsBirthdayText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/SettingsDeleteBDay"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
...
