...
    <string name="meetup_view_age_text">Age</string>
    <string name="meetup_view_age" formatted="true">%s-%s years</string>
    <string name="meetup_view_gender_title">Gender</string>
    <string name="meetup_with_blocked_warning">A user you blocked is participating in this meetup, are you sure you want to join ?</string>


    <string name="ok">OK</string>

    <string name="date_long_format">EEEE, MMMM d, yyyy \'at\' h:mm a</string>
    <string name="date_very_short_format">h:mm</string>
    <string name="date_short_format">d MMMM</string>
    <string name="date_medium_format">d MMMM yyyy</string>

...
